--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,16 @@
 /* Ini Css */
+
+nav {
+display: flex;
+justify-content: space-between;    
+}
+
+.logo-icon {
+    height: 50px;
+    width: 50px;
+    border: 1px solid black;
+}
+
+.nav.item {
+    border: 1px solid black;
+}
