--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,22 @@
 /* Ini Css */
 
 nav {
-display: flex;
-justify-content: space-between;    
-}
-
-.logo-icon {
-    height: 50px;
-    width: 50px;
-    border: 1px solid black;
-}
-
-.nav.item {
-    border: 1px solid black;
-}
+    display: flex;
+    justify-content: space-between;
+    }
+    
+    nav.section {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .logo-icon {
+        height: 50px;
+        width: 50px;
+        border: 1px solid black;
+    }
+    
+    .nav.item {
+        border: 1px solid black;
+    }
+    
